cabal-version:       2.4
name:                crymon
version:             0.0.0.0
synopsis:            A tool to compute asset value from exchanges
description:         A tool to compute asset value from exchanges
license:             MIT
license-file:        LICENSE
author:              Fabien Boucher
maintainer:          Fabien Boucher <fabien.dot.boucher@gmail.com>
copyright:           2021 Fabien Boucher
category:            Utility
build-type:          Simple
extra-doc-files:     README.md
                     CHANGELOG.md
tested-with:         GHC == 8.8.3

common common-options
  build-depends:       base ^>= 4.13.0.0
  
  ghc-options:         -Wall
                       -Wcompat
                       -Widentities
                       -Wincomplete-uni-patterns
                       -Wincomplete-record-updates
  if impl(ghc >= 8.0)
    ghc-options:       -Wredundant-constraints
  if impl(ghc >= 8.2)
    ghc-options:       -fhide-source-paths
  if impl(ghc >= 8.4)
    ghc-options:       -Wmissing-export-lists
                       -Wpartial-fields
  if impl(ghc >= 8.8)
    ghc-options:       -Wmissing-deriving-strategies

  default-language:    Haskell2010

library
  import:              common-options
  hs-source-dirs:      src
  exposed-modules:     Crymon

executable crymon
  import:              common-options
  hs-source-dirs:      app
  main-is:             Main.hs
  build-depends:       crymon
  ghc-options:         -threaded
                       -rtsopts
                       -with-rtsopts=-N

test-suite crymon-test
  import:              common-options
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       crymon
  ghc-options:         -threaded
                       -rtsopts
                       -with-rtsopts=-N
