cabal-version:       2.4
name:                crymon
version:             0.0.0.0
synopsis:            A tool to compute asset value from exchanges
description:         A tool to compute asset value from exchanges
license:             MIT
license-file:        LICENSE
author:              Fabien Boucher
maintainer:          Fabien Boucher <fabien.dot.boucher@gmail.com>
copyright:           2021 Fabien Boucher
category:            Utility
build-type:          Simple
extra-doc-files:     README.md
                     CHANGELOG.md
tested-with:         GHC == 8.8.3

common common-options
  build-depends:       base ^>= 4.13.0.0

  ghc-options:         -Wall
                       -Wcompat
                       -Widentities
                       -Wincomplete-uni-patterns
                       -Wincomplete-record-updates
  if impl(ghc >= 8.0)
    ghc-options:       -Wredundant-constraints
  if impl(ghc >= 8.2)
    ghc-options:       -fhide-source-paths
  if impl(ghc >= 8.4)
    ghc-options:       -Wmissing-export-lists
                       -Wpartial-fields
  if impl(ghc >= 8.8)
    ghc-options:       -Wmissing-deriving-strategies

  default-language:    Haskell2010

library
  import:              common-options
  hs-source-dirs:      src
  exposed-modules:     Crymon
  build-depends:       base < 5
                     , relude ^>= 1.0.0.0
                     , http-client < 0.7.9
                     , http-client-tls < 0.3.5.5
                     , time < 1.11.1.3
                     , base64-bytestring < 1.2.0.1
                     , aeson < 1.5.6.1
                     , cryptohash-sha256 < 0.11.102.1
                     , cryptohash-sha512 < 0.11.100.2
  mixins:              base hiding (Prelude)
                     , relude (Relude as Prelude)
                     , relude

executable crymon
  import:              common-options
  hs-source-dirs:      app
  main-is:             Main.hs
  build-depends:       crymon
  ghc-options:         -threaded
                       -rtsopts
                       -with-rtsopts=-N

test-suite crymon-test
  import:              common-options
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       crymon
  ghc-options:         -threaded
                       -rtsopts
                       -with-rtsopts=-N
